--- a/app/src/main/res/layout/activity_ubungen_2.xml
+++ b/app/src/main/res/layout/activity_ubungen_2.xml
@@ -5,11 +5,108 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <CheckBox
+        android:id="@+id/checkBox7"
+        android:layout_width="155dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="20dp"
+        android:text="Übungsname"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/textView73"
+        app:layout_constraintTop_toBottomOf="@+id/textView73" />
+
+    <CheckBox
+        android:id="@+id/checkBox9"
+        android:layout_width="158dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="8dp"
+        android:text="Übungsname"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/checkBox7"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/checkBox7"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox7" />
+
+    <CheckBox
+        android:id="@+id/checkBox3"
+        android:layout_width="156dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="8dp"
+        android:text="Übungsname"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/checkBox4"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />
+
+    <CheckBox
+        android:id="@+id/checkBox11"
+        android:layout_width="156dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="60dp"
+        android:text="Übungsname"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/checkBox4"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />
+
+    <CheckBox
+        android:id="@+id/checkBox12"
+        android:layout_width="156dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="176dp"
+        android:layout_marginTop="64dp"
+        android:text="Übungsname"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/checkBox4"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />
+
+    <CheckBox
+        android:id="@+id/checkBox4"
+        android:layout_width="155dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="8dp"
+        android:text="Übungsname"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/checkBox5"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />
+
+    <CheckBox
+        android:id="@+id/checkBox8"
+        android:layout_width="155dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="176dp"
+        android:layout_marginTop="8dp"
+        android:text="Übungsname"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/checkBox5"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />
+
+    <CheckBox
+        android:id="@+id/checkBox5"
+        android:layout_width="158dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="20dp"
+        android:text="Übungsname"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/checkBox9"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox" />
+
+    <CheckBox
+        android:id="@+id/checkBox6"
+        android:layout_width="156dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="176dp"
+        android:layout_marginTop="8dp"
+        android:text="Übungsname"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/checkBox4"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/start_seite_toolbar4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:background="@android:color/darker_gray"
         android:minHeight="?attr/actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,8 +211,8 @@
 
     <CheckBox
         android:id="@+id/checkBox"
-        android:layout_width="196dp"
-        android:layout_height="42dp"
+        android:layout_width="155dp"
+        android:layout_height="45dp"
         android:layout_marginTop="20dp"
         android:text="Übungsname"
         android:textSize="20sp"
@@ -124,75 +221,44 @@
 
     <CheckBox
         android:id="@+id/checkBox2"
-        android:layout_width="196dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="151dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="24dp"
         android:text="Übungsname"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/textView75"
         app:layout_constraintTop_toBottomOf="@+id/textView75" />
 
     <CheckBox
-        android:id="@+id/checkBox5"
-        android:layout_width="196dp"
+        android:id="@+id/checkBox10"
+        android:layout_width="153dp"
         android:layout_height="42dp"
+        android:layout_marginStart="180dp"
         android:layout_marginTop="24dp"
         android:text="Übungsname"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/textView74"
-        app:layout_constraintTop_toBottomOf="@+id/textView74" />
-
-    <CheckBox
-        android:id="@+id/checkBox3"
-        android:layout_width="196dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="40dp"
-        android:text="Übungsname"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/checkBox4"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />
-
-    <CheckBox
-        android:id="@+id/checkBox4"
-        android:layout_width="196dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="32dp"
-        android:text="Übungsname"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/checkBox5"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />
+        app:layout_constraintStart_toStartOf="@+id/textView75"
+        app:layout_constraintTop_toBottomOf="@+id/textView75" />
 
     <TextView
         android:id="@+id/textView73"
-        android:layout_width="118dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="16dp"
-        android:text="Tagesziel"
+        android:layout_width="335dp"
+        android:layout_height="71dp"
+        android:layout_marginTop="12dp"
+        android:text='Hier Würde der Titel "Ubungen gegen ... " stehen'
         android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.177"
         app:layout_constraintStart_toStartOf="@+id/start_seite_toolbar4"
         app:layout_constraintTop_toBottomOf="@+id/start_seite_toolbar4" />
-
-    <TextView
-        android:id="@+id/textView74"
-        android:layout_width="192dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="24dp"
-        android:text="Offene Übungen"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/checkBox"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox" />
 
     <TextView
         android:id="@+id/textView75"
         android:layout_width="294dp"
         android:layout_height="55dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="108dp"
         android:text="Abgeschlossene Übungen"
         android:textColor="#000000"
         android:textSize="24sp"
@@ -201,12 +267,15 @@
         app:layout_constraintTop_toBottomOf="@+id/checkBox3" />
 
     <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="61dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        android:id="@+id/imageView7"
+        android:layout_width="54dp"
+        android:layout_height="37dp"
+        app:layout_constraintBottom_toBottomOf="@+id/start_seite_toolbar4"
+        app:layout_constraintEnd_toEndOf="@+id/start_seite_toolbar4"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/start_seite_toolbar4"
+        app:layout_constraintTop_toTopOf="@+id/start_seite_toolbar4"
+        app:layout_constraintVertical_bias="0.631"
         app:srcCompat="@drawable/ic_menu_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
