--- a/app/src/main/res/layout/activity_wiki.xml
+++ b/app/src/main/res/layout/activity_wiki.xml
@@ -143,17 +143,48 @@
         app:barrierDirection="top" />
 
     <SearchView
-        android:layout_width="333dp"
-        android:layout_height="47dp"
+        android:layout_width="41dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView73"
-        tools:layout_editor_absoluteX="39dp" />
+        tools:layout_editor_absoluteX="41dp">
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_weight="1"
+            android:background="?android:attr/listDivider" />
+
+        <View
+            android:id="@+id/divider11"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_weight="1"
+            android:background="?android:attr/listDivider" />
+    </SearchView>
 
     <LinearLayout
         android:layout_width="337dp"
         android:layout_height="211dp"
+        android:background="@color/white"
+        android:baselineAligned="true"
+        android:divider="@color/black"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="37dp"
         tools:layout_editor_absoluteY="235dp">
+
+        <View
+            android:id="@+id/divider5"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider" />
+
+        <View
+            android:id="@+id/divider2"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="?android:attr/listDivider" />
 
         <TextView
             android:id="@+id/textView80"
@@ -162,12 +193,30 @@
             android:text="Thema 1"
             android:textSize="20sp" />
 
+        <View
+            android:id="@+id/divider3"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider" />
+
         <TextView
             android:id="@+id/textView81"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Thema 2"
             android:textSize="20sp" />
+
+        <View
+            android:id="@+id/divider4"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider" />
+
+        <View
+            android:id="@+id/divider7"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider" />
 
         <TextView
             android:id="@+id/textView82"
@@ -176,12 +225,24 @@
             android:text=" Sub-Thema 2.1\n Sub-Thema 2.2\n Sub-Thema 2.3\n Sub-Thema 2.4\n"
             android:textSize="20sp" />
 
+        <View
+            android:id="@+id/divider6"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider" />
+
         <TextView
             android:id="@+id/textView83"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Thema 3"
             android:textSize="20sp" />
+
+        <View
+            android:id="@+id/divider8"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider" />
 
         <TextView
             android:id="@+id/textView84"
@@ -198,5 +259,14 @@
         android:text="Quellen und weitere Websites für die Information stehen."
         tools:layout_editor_absoluteX="39dp"
         tools:layout_editor_absoluteY="590dp" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName6"
+        android:layout_width="288dp"
+        android:layout_height="48dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        tools:layout_editor_absoluteX="83dp"
+        tools:layout_editor_absoluteY="170dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
