--- a/app/src/main/res/layout/activity_chat_bot.xml
+++ b/app/src/main/res/layout/activity_chat_bot.xml
@@ -15,11 +15,11 @@
     <LinearLayout
         android:id="@+id/chatMessages"
         android:layout_width="match_parent"
-        android:layout_height="341dp"
-        android:layout_marginTop="76dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/include6"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <TextView
             android:id="@+id/textView25"
@@ -29,6 +29,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/back"
+            android:elevation="1.5dp"
             android:padding="10dp"
             android:text="Hallo! Ich bin dein Persönlicher Chatbot. Hier können Hinweise bzgl. der Benutzung folgen und inwiefern der Bot auf Nachrichten der Nutzer*innen reagiert." />
 
@@ -40,6 +41,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/back"
+            android:elevation="1.5dp"
             android:padding="10dp"
             android:text="Bitte erzähle mir hier, wofür du die App nutzen mõchtest!" />
 
@@ -51,6 +53,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/back"
+            android:elevation="1.5dp"
             android:padding="10dp"
             android:text="Der Chatbot könnte fragen, ob der Nutzer den Depressionstest mit ihm Durchführen möchte, oder aber lieber über seinen Tag reden möchte." />
     </LinearLayout>
@@ -63,7 +66,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/chatMessages">
+        app:layout_constraintTop_toBottomOf="@+id/chatMessages"
+        app:layout_constraintVertical_bias="1.0">
 
         <EditText
             android:id="@+id/editTextTextPersonName2"
@@ -74,7 +78,6 @@
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
-            android:background="@drawable/back"
             android:ems="10"
             android:hint="Bitte gib hier deine Nachricht ein."
             android:inputType="textPersonName"
